--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,23 @@ cache/
 out/
 
 # Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
+/broadcast/
 
 # Docs
 docs/
 
 # Dotenv file
 .env
+
+# Coverage
+
+lcov.info
+coverage
+
+node_modules
+coverage.json
+
+.DS_Store
+
+.idea
+.vscode
